# glimmer

./: .gitignore  AGENTS.md  README.md  asd_ds_dataset.py  eval_gguf_llama_cpp.py  eval_litert_lm.py  pyproject.toml  run_train.py  try_gemma.ipynb
glimmer-ios/: .gitignore  HANDOFF.md  MODEL_ISSUE.md  README.md
glimmer-ios/core/Sources/GlimmerCore/: AsdBehaviorParser.swift  AsdExplanationPrompts.swift  AsdGgufContract.swift
glimmer-ios/core/Tests/GlimmerCoreTests/: AsdBehaviorParserTests.swift  AsdExplanationPromptsTests.swift  AsdGgufContractTests.swift
glimmer-ios/data/sample/: train.jsonl
glimmer-ios/docs/: ios-integration-report.md
glimmer-ios/ios/: Package.swift  project.yml
glimmer-ios/ios/App/: Info.plist
glimmer-ios/ios/Gallery/: Info.plist
glimmer-ios/ios/GemmaScreen.xcodeproj/: project.pbxproj
glimmer-ios/ios/Resources/: ModelManifest.json  test_clip.mov
glimmer-ios/ios/Sources/: AudioExtractor.swift  ContentView.swift  GemmaScreenApp.swift  Info.plist  ReportView.swift  ScreeningService.swift  Theme.swift
glimmer-ios/ios/Sources/AsdGgufNative/: ASDGgufNativeRunner.mm
prompts/en/: system.md  user.md
prompts/zh/: system.md  user.md
scripts/: export_eval_waudio_textwi4_visionwi8.sh  run_code9_noaudio_experiment.sh  run_code9_r32_5epoch_fast.sh  run_code9_r32_5epoch_qlora_loftq.sh  run_code9_r32_ep10_qlora_loftq_waudio_wi8.sh  run_code9_r32_ep20_qlora_loftq_full.sh  train_code9_r32_ep10_video_f30_qlora_loftq.sh  train_zh_v2.sh
slides/: glimmer-tech-route.md  glimmer.css
swift/asd-litert-cli/: README.md
(+42 files in other folders)
