[project]
name = "ft"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "transformers>=4.0",
    "accelerate",
    "datasets",
    "numpy",
    "httpx[socks]>=0.28.1",
    "ipykernel>=7.2.0",
    "click>=8.4.1",
    "wandb>=0.27.0",
    "peft>=0.19.1",
    "matplotlib>=3.10.9",
    "litert-torch>=0.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
